更新接口文档(auth, comment, favorite, waybill)

--- a/routes/README.ipynb
+++ b/routes/README.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,21 +45,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"message\": \"Register successful\"\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "fetch(\"http://localhost:3000/auth/register\",{ \"role\": \"user\",\"id\": \"100000009\", \"password\": \"0\"})"
+    "fetch(\"http://localhost:3000/auth/register\",{\n",
+    "    \"role\": \"user\",\n",
+    "    \"id\": \"100000009\",\n",
+    "    \"password\": \"0\"\n",
+    "    })"
    ]
   },
   {
@@ -75,7 +69,142 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fetch(\"http://localhost:3000/auth/login\",{\"id\": \"100000000\", \"password\": \"0\"})"
+    "fetch(\"http://localhost:3000/auth/login\",{\n",
+    "    \"id\": \"100000000\",\n",
+    "    \"password\": \"0\"\n",
+    "    })"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. 评论 `/comment`\n",
+    "\n",
+    "+ `/query` 查询驿站的评价"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fetch(\"http://localhost:3000/comment/query\",{\"stationId\": \"3\"})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ `/query_mine` 查询我的评价"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fetch(\"http://localhost:3000/comment/query_mine\",{\"userId\": \"100000002\"})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ `/add` 添加评价"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fetch(\"http://localhost:3000/comment/add\",{\n",
+    "    \"userId\": \"100000002\",\n",
+    "    \"stationId\": \"3\",\n",
+    "    \"speed_score\": \"3\",\n",
+    "    \"service_score\": \"4\",\n",
+    "    \"price_score\": \"5\",\n",
+    "    \"comment_content\": \"这是一个测试这是一个测试这是一个测试\"\n",
+    "    })"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ `/delete` 删除评价"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fetch(\"http://localhost:3000/comment/delete\",{\n",
+    "    \"commentId\": \"31\",\n",
+    "    \"userId\": \"100000002\"\n",
+    "    })"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. 收藏 `/favorite`\n",
+    "\n",
+    "+ `/query` 查看用户收藏的驿站信息，展示用户的收藏"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fetch(\"http://localhost:3000/favorite/query\",{\"userId\": \"100000001\"})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ `/add` 添加收藏"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fetch(\"http://localhost:3000/favorite/add\",{\n",
+    "    \"userId\": \"100000000\",\n",
+    "    \"stationId\": \"2\"\n",
+    "    })"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ `/remove` 移除收藏"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fetch(\"http://localhost:3000/favorite/remove\",{\n",
+    "    \"userId\": \"100000000\",\n",
+    "    \"stationId\": \"2\"\n",
+    "    })"
    ]
   },
   {
@@ -93,7 +222,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fetch(\"http://localhost:3000/waybill/not_shipped\",{\"id\": \"100000003\"})"
+    "fetch(\"http://localhost:3000/waybill/not_shipped\",{\"userId\": \"100000003\"})"
    ]
   },
   {
@@ -109,7 +238,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fetch(\"http://localhost:3000/waybill/pending_pickup\", {\"id\":\"100000000\"})"
+    "fetch(\"http://localhost:3000/waybill/pending_pickup\", {\"userId\":\"100000000\"})"
    ]
   },
   {
@@ -125,7 +254,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fetch(\"http://localhost:3000/waybill/in_transit\", {\"id\":\"100000002\"})"
+    "fetch(\"http://localhost:3000/waybill/in_transit\", {\"userId\":\"100000002\"})"
    ]
   },
   {
@@ -141,7 +270,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fetch(\"http://localhost:3000/waybill/history\", {\"id\":\"100000001\"})"
+    "fetch(\"http://localhost:3000/waybill/history\", {\"userId\":\"100000001\"})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+  `/query` 根据订单号查询运单"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fetch(\"http://localhost:3000/waybill/query\",{\"orderNumber\":\"YD202506070017\"})"
    ]
   }
  ],
