modified:   data/README.md 	modified:   routes/README.ipynb 	new file:   routes/manager.js 	modified:   routes/station.js 	modified:   server.js

--- a/routes/README.ipynb
+++ b/routes/README.ipynb
@@ -211,6 +211,131 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 4. 驿站管理员 `/manager`\n",
+    "\n",
+    "+ `/query` 查询管理的驿站"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fetch(\"http://localhost:3000/manager/query\",{ \"managerId\": \"200000\"})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ `/add` 添加驿站"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fetch(\"http://localhost:3000/manager/add\",{\n",
+    "    \"managerId\": \"200000\",\n",
+    "    \"station_name\": \"测试驿站\",\n",
+    "    \"address\": \"测试地址测试地址\",\n",
+    "    \"business_hours\": \"08:00-20:00\",\n",
+    "    \"business_area\": \"测试区域\",\n",
+    "    \"capacity\": \"50\",\n",
+    "    \"is_open\": \"1\"\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ `/modify` 修改驿站信息"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fetch(\"http://localhost:3000/manager/modify\",{\n",
+    "    \"stationId\": \"7\",\n",
+    "    \"station_name\": \"测试修改驿站\",\n",
+    "    \"address\": \"测试地址测试地址\",\n",
+    "    \"business_hours\": \"08:00-20:00\",\n",
+    "    \"business_area\": \"测试区域\",\n",
+    "    \"capacity\": \"50\",\n",
+    "    \"is_open\": \"0\"\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ `/remove` 移除驿站"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fetch(\"http://localhost:3000/manager/remove\",{ \"stationId\": \"7\"})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. 驿站  `station`\n",
+    "\n",
+    "+ `/query` 查询驿站信息"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fetch(\"http://localhost:3000/station/query\",{\n",
+    "    \"managerId\": \"200000\",\n",
+    "    \"longitude\": \"116.17212999999992\",\n",
+    "    \"latitude\": \"39.731781999999995\"\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ `/query_by_name` 名字包含匹配查询，返回驿站id, 再传入id查询"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fetch(\"http://localhost:3000/station/query_by_name\",{ \"name\": \"院店\"})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 运单 `/waybill`\n",
     "\n",
     "+ `/not_shipped` 查询未发货的运单"
