更新接口及文档

--- a/routes/README.ipynb
+++ b/routes/README.ipynb
@@ -305,7 +305,6 @@
    "outputs": [],
    "source": [
     "fetch(\"http://localhost:3000/station/query\",{\n",
-    "    \"managerId\": \"200000\",\n",
     "    \"longitude\": \"116.17212999999992\",\n",
     "    \"latitude\": \"39.731781999999995\"\n",
     "})"
@@ -324,13 +323,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fetch(\"http://localhost:3000/station/query_by_name\",{ \"name\": \"院店\"})"
+    "fetch(\"http://localhost:3000/station/query_by_name\",{\n",
+    "    \"name\": \"院店\",\n",
+    "    \"longitude\": \"116.17212999999992\",\n",
+    "    \"latitude\": \"39.731781999999995\"\n",
+    "})"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 6. 用户 `/user`\n",
+    "\n",
+    "+ "
+   ]
   },
   {
    "cell_type": "markdown",
