modified:   routes/README.ipynb 	modified:   routes/user.js

--- a/routes/README.ipynb
+++ b/routes/README.ipynb
@@ -336,14 +336,99 @@
    "source": [
     "### 6. 用户 `/user`\n",
     "\n",
-    "+ "
+    "+ `/rename` 用户重命名"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fetch(\"http://localhost:3000/user/rename\",{\n",
+    "    \"userId\": \"100000000\",\n",
+    "    \"user_name\": \"测试用户\"\n",
+    "})"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 运单 `/waybill`\n",
+    "+ `/reset_password` 用户重设密码"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fetch(\"http://localhost:3000/user/reset_password\",{\n",
+    "    \"userId\": \"100000000\",\n",
+    "    \"new_password\": \"123\"\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ `/query_address` 用户查看保存的地址"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fetch(\"http://localhost:3000/user/query_address\",{ \"userId\": \"100000000\" })"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ `/add_address` 用户添加地址"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fetch(\"http://localhost:3000/user/add_address\",{\n",
+    "    \"userId\": \"100000000\",\n",
+    "    \"address\": \"测试地址2\"\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ `/delete_address` 用户删除地址"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fetch(\"http://localhost:3000//user/delete_address\",{\n",
+    "    \"userId\": \"100000000\",\n",
+    "    \"index\": \"1\"\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7. 运单 `/waybill`\n",
     "\n",
     "+ `/not_shipped` 查询未发货的运单"
    ]
