更新文档和部分测试

--- a/doc/Interface_test.ipynb
+++ b/doc/Interface_test.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
     "    \"role\": \"user\",\n",
     "    \"id\": \"100000009\",\n",
     "    \"password\": \"0\"\n",
-    "    })"
+    "})"
    ]
   },
   {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
     "fetch(\"http://localhost:3000/auth/login\",{\n",
     "    \"id\": \"100000000\",\n",
     "    \"password\": \"0\"\n",
-    "    })"
+    "})"
    ]
   },
   {
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
     "    \"service_score\": \"4\",\n",
     "    \"price_score\": \"5\",\n",
     "    \"comment_content\": \"这是一个测试这是一个测试这是一个测试\"\n",
-    "    })"
+    "})"
    ]
   },
   {
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
     "fetch(\"http://localhost:3000/comment/delete\",{\n",
     "    \"commentId\": \"31\",\n",
     "    \"userId\": \"100000002\"\n",
-    "    })"
+    "})"
    ]
   },
   {
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
     "fetch(\"http://localhost:3000/favorite/add\",{\n",
     "    \"userId\": \"100000000\",\n",
     "    \"stationId\": \"2\"\n",
-    "    })"
+    "})"
    ]
   },
   {
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
     "fetch(\"http://localhost:3000/favorite/remove\",{\n",
     "    \"userId\": \"100000000\",\n",
     "    \"stationId\": \"2\"\n",
-    "    })"
+    "})"
    ]
   },
   {
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +851,11 @@
       "{\n",
       "  \"address\": [\n",
       "    {\n",
-      "      \"address_list\": null\n",
+      "      \"address_list\": [\n",
+      "        \"测试地址2\",\n",
+      "        \"测试地址2\",\n",
+      "        \"测试地址2\"\n",
+      "      ]\n",
       "    }\n",
       "  ]\n",
       "}\n"
@@ -871,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -931,63 +935,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\n",
-      "  {\n",
-      "    \"tracking_number\": 1,\n",
-      "    \"send_time\": \"2025-05-26T17:19:40.000Z\",\n",
-      "    \"receive_time\": null,\n",
-      "    \"origin\": \"北京\",\n",
-      "    \"destination\": \"成都\",\n",
-      "    \"status\": \"00\",\n",
-      "    \"sender_id\": \"100000003\",\n",
-      "    \"receiver_id\": \"100000000\",\n",
-      "    \"current_station_id\": 6,\n",
-      "    \"order_number\": \"YD202505270001\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"tracking_number\": 4,\n",
-      "    \"send_time\": \"2025-06-05T17:19:40.000Z\",\n",
-      "    \"receive_time\": null,\n",
-      "    \"origin\": \"上海\",\n",
-      "    \"destination\": \"西安\",\n",
-      "    \"status\": \"00\",\n",
-      "    \"sender_id\": \"100000003\",\n",
-      "    \"receiver_id\": \"100000001\",\n",
-      "    \"current_station_id\": 1,\n",
-      "    \"order_number\": \"YD202506060004\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"tracking_number\": 6,\n",
-      "    \"send_time\": \"2025-05-28T17:19:40.000Z\",\n",
-      "    \"receive_time\": null,\n",
-      "    \"origin\": \"杭州\",\n",
-      "    \"destination\": \"南京\",\n",
-      "    \"status\": \"00\",\n",
-      "    \"sender_id\": \"100000001\",\n",
-      "    \"receiver_id\": \"100000003\",\n",
-      "    \"current_station_id\": 5,\n",
-      "    \"order_number\": \"YD202505290006\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"tracking_number\": 19,\n",
-      "    \"send_time\": \"2025-05-28T17:19:40.000Z\",\n",
-      "    \"receive_time\": null,\n",
-      "    \"origin\": \"杭州\",\n",
-      "    \"destination\": \"西安\",\n",
-      "    \"status\": \"00\",\n",
-      "    \"sender_id\": \"100000004\",\n",
-      "    \"receiver_id\": \"100000003\",\n",
-      "    \"current_station_id\": 1,\n",
-      "    \"order_number\": \"YD202505290019\"\n",
-      "  }\n",
-      "]\n"
+      "{\n",
+      "  \"waybills\": [\n",
+      "    {\n",
+      "      \"tracking_number\": 1,\n",
+      "      \"send_time\": \"2025-05-26T17:19:40.000Z\",\n",
+      "      \"receive_time\": null,\n",
+      "      \"origin\": \"北京\",\n",
+      "      \"destination\": \"成都\",\n",
+      "      \"status\": \"00\",\n",
+      "      \"sender_id\": \"100000003\",\n",
+      "      \"receiver_id\": \"100000000\",\n",
+      "      \"current_station_id\": 6,\n",
+      "      \"order_number\": \"YD202505270001\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"tracking_number\": 4,\n",
+      "      \"send_time\": \"2025-06-05T17:19:40.000Z\",\n",
+      "      \"receive_time\": null,\n",
+      "      \"origin\": \"上海\",\n",
+      "      \"destination\": \"西安\",\n",
+      "      \"status\": \"00\",\n",
+      "      \"sender_id\": \"100000003\",\n",
+      "      \"receiver_id\": \"100000001\",\n",
+      "      \"current_station_id\": 1,\n",
+      "      \"order_number\": \"YD202506060004\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"tracking_number\": 6,\n",
+      "      \"send_time\": \"2025-05-28T17:19:40.000Z\",\n",
+      "      \"receive_time\": null,\n",
+      "      \"origin\": \"杭州\",\n",
+      "      \"destination\": \"南京\",\n",
+      "      \"status\": \"00\",\n",
+      "      \"sender_id\": \"100000001\",\n",
+      "      \"receiver_id\": \"100000003\",\n",
+      "      \"current_station_id\": 5,\n",
+      "      \"order_number\": \"YD202505290006\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"tracking_number\": 19,\n",
+      "      \"send_time\": \"2025-05-28T17:19:40.000Z\",\n",
+      "      \"receive_time\": null,\n",
+      "      \"origin\": \"杭州\",\n",
+      "      \"destination\": \"西安\",\n",
+      "      \"status\": \"00\",\n",
+      "      \"sender_id\": \"100000004\",\n",
+      "      \"receiver_id\": \"100000003\",\n",
+      "      \"current_station_id\": 1,\n",
+      "      \"order_number\": \"YD202505290019\"\n",
+      "    }\n",
+      "  ]\n",
+      "}\n"
      ]
     }
    ],
@@ -1004,39 +1010,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\n",
-      "  {\n",
-      "    \"tracking_number\": 2,\n",
-      "    \"send_time\": \"2025-05-25T17:19:40.000Z\",\n",
-      "    \"receive_time\": null,\n",
-      "    \"origin\": \"上海\",\n",
-      "    \"destination\": \"青岛\",\n",
-      "    \"status\": \"01\",\n",
-      "    \"sender_id\": \"100000004\",\n",
-      "    \"receiver_id\": \"100000000\",\n",
-      "    \"current_station_id\": 5,\n",
-      "    \"order_number\": \"YD202505260002\"\n",
-      "  },\n",
-      "  {\n",
-      "    \"tracking_number\": 3,\n",
-      "    \"send_time\": \"2025-05-26T17:19:40.000Z\",\n",
-      "    \"receive_time\": null,\n",
-      "    \"origin\": \"上海\",\n",
-      "    \"destination\": \"西安\",\n",
-      "    \"status\": \"01\",\n",
-      "    \"sender_id\": \"100000004\",\n",
-      "    \"receiver_id\": \"100000000\",\n",
-      "    \"current_station_id\": 1,\n",
-      "    \"order_number\": \"YD202505270003\"\n",
-      "  }\n",
-      "]\n"
+      "{\n",
+      "  \"waybills\": [\n",
+      "    {\n",
+      "      \"tracking_number\": 2,\n",
+      "      \"send_time\": \"2025-05-25T17:19:40.000Z\",\n",
+      "      \"receive_time\": null,\n",
+      "      \"origin\": \"上海\",\n",
+      "      \"destination\": \"青岛\",\n",
+      "      \"status\": \"01\",\n",
+      "      \"sender_id\": \"100000004\",\n",
+      "      \"receiver_id\": \"100000000\",\n",
+      "      \"current_station_id\": 5,\n",
+      "      \"order_number\": \"YD202505260002\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"tracking_number\": 3,\n",
+      "      \"send_time\": \"2025-05-26T17:19:40.000Z\",\n",
+      "      \"receive_time\": null,\n",
+      "      \"origin\": \"上海\",\n",
+      "      \"destination\": \"西安\",\n",
+      "      \"status\": \"01\",\n",
+      "      \"sender_id\": \"100000004\",\n",
+      "      \"receiver_id\": \"100000000\",\n",
+      "      \"current_station_id\": 1,\n",
+      "      \"order_number\": \"YD202505270003\"\n",
+      "    }\n",
+      "  ]\n",
+      "}\n"
      ]
     }
    ],
@@ -1053,27 +1061,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\n",
-      "  {\n",
-      "    \"tracking_number\": 18,\n",
-      "    \"send_time\": \"2025-06-05T17:19:40.000Z\",\n",
-      "    \"receive_time\": null,\n",
-      "    \"origin\": \"杭州\",\n",
-      "    \"destination\": \"西安\",\n",
-      "    \"status\": \"10\",\n",
-      "    \"sender_id\": \"100000001\",\n",
-      "    \"receiver_id\": \"100000002\",\n",
-      "    \"current_station_id\": 2,\n",
-      "    \"order_number\": \"YD202506060018\"\n",
-      "  }\n",
-      "]\n"
+      "{\n",
+      "  \"waybills\": [\n",
+      "    {\n",
+      "      \"tracking_number\": 18,\n",
+      "      \"send_time\": \"2025-06-05T17:19:40.000Z\",\n",
+      "      \"receive_time\": null,\n",
+      "      \"origin\": \"杭州\",\n",
+      "      \"destination\": \"西安\",\n",
+      "      \"status\": \"10\",\n",
+      "      \"sender_id\": \"100000001\",\n",
+      "      \"receiver_id\": \"100000002\",\n",
+      "      \"current_station_id\": 2,\n",
+      "      \"order_number\": \"YD202506060018\"\n",
+      "    }\n",
+      "  ]\n",
+      "}\n"
      ]
     }
    ],
@@ -1090,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1098,7 +1108,7 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"history_waybills\": [\n",
+      "  \"waybills\": [\n",
       "    {\n",
       "      \"tracking_number\": 7,\n",
       "      \"send_time\": \"2025-06-06T17:19:40.000Z\",\n",
@@ -1141,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1149,16 +1159,20 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"tracking_number\": 17,\n",
-      "  \"send_time\": \"2025-06-06T17:19:40.000Z\",\n",
-      "  \"receive_time\": \"2025-06-10T17:19:40.000Z\",\n",
-      "  \"origin\": \"上海\",\n",
-      "  \"destination\": \"成都\",\n",
-      "  \"status\": \"11\",\n",
-      "  \"sender_id\": \"100000001\",\n",
-      "  \"receiver_id\": \"100000000\",\n",
-      "  \"current_station_id\": 5,\n",
-      "  \"order_number\": \"YD202506070017\"\n",
+      "  \"waybills\": [\n",
+      "    {\n",
+      "      \"tracking_number\": 17,\n",
+      "      \"send_time\": \"2025-06-06T17:19:40.000Z\",\n",
+      "      \"receive_time\": \"2025-06-10T17:19:40.000Z\",\n",
+      "      \"origin\": \"上海\",\n",
+      "      \"destination\": \"成都\",\n",
+      "      \"status\": \"11\",\n",
+      "      \"sender_id\": \"100000001\",\n",
+      "      \"receiver_id\": \"100000000\",\n",
+      "      \"current_station_id\": 5,\n",
+      "      \"order_number\": \"YD202506070017\"\n",
+      "    }\n",
+      "  ]\n",
       "}\n"
      ]
     }
