增加屏蔽数据库，添加屏蔽接口，修改查询接口以适配屏蔽过滤

--- a/doc/Interface_test.ipynb
+++ b/doc/Interface_test.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,18 +47,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"message\": \"Register successful\",\n",
-      "  \"userId\": 0\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fetch(\"http://localhost:3000/auth/register\",{\n",
     "    \"role\": \"user\",\n",
@@ -87,9 +76,12 @@
       "  \"message\": \"Login successful\",\n",
       "  \"user\": {\n",
       "    \"id\": \"100000000\",\n",
-      "    \"user_name\": \"user_0\",\n",
-      "    \"password\": \"0\",\n",
-      "    \"address_list\": null\n",
+      "    \"user_name\": \"测试用户\",\n",
+      "    \"password\": \"123\",\n",
+      "    \"address_list\": [\n",
+      "      \"测试地址2\",\n",
+      "      \"测试地址2\"\n",
+      "    ]\n",
       "  },\n",
       "  \"role\": \"users\"\n",
       "}\n"
@@ -303,14 +295,131 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. 收藏 `/favorite`\n",
+    "### 3. 屏蔽 `/block`\n",
     "\n",
     "+ `/query` 查看用户收藏的驿站信息，展示用户的收藏"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"block_list\": [\n",
+      "    {\n",
+      "      \"station_id\": 1,\n",
+      "      \"station_name\": \"菜鸟驿站北京房山伟业嘉园东里2号楼店(易购超市店)\",\n",
+      "      \"address\": \"拱辰街道东关村竹园街1号-11\",\n",
+      "      \"speed_score\": \"4.7\",\n",
+      "      \"service_score\": \"5.0\",\n",
+      "      \"price_score\": \"3.7\",\n",
+      "      \"business_hours\": \"08:00-20:00\",\n",
+      "      \"is_open\": 1\n",
+      "    },\n",
+      "    {\n",
+      "      \"station_id\": 2,\n",
+      "      \"station_name\": \"菜鸟驿站(北京房山阳光邑上417东门店)\",\n",
+      "      \"address\": \"北京市房山区拱辰街道拱辰大街阳光邑上41-7号\",\n",
+      "      \"speed_score\": \"3.7\",\n",
+      "      \"service_score\": \"3.3\",\n",
+      "      \"price_score\": \"4.0\",\n",
+      "      \"business_hours\": \"06:00-17:00\",\n",
+      "      \"is_open\": 0\n",
+      "    },\n",
+      "    {\n",
+      "      \"station_id\": 6,\n",
+      "      \"station_name\": \"菜鸟驿站(北京房山阜盛家园店)\",\n",
+      "      \"address\": \"北京市房山区长阳镇燕保阜盛家园南区北门院外底商菜鸟驿站\",\n",
+      "      \"speed_score\": \"4.0\",\n",
+      "      \"service_score\": \"5.0\",\n",
+      "      \"price_score\": \"5.0\",\n",
+      "      \"business_hours\": \"08:00-20:00\",\n",
+      "      \"is_open\": 1\n",
+      "    }\n",
+      "  ]\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "fetch(\"http://localhost:3000/block/query\",{\"userId\": \"100000000\"})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ `/add` 添加收藏"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"message\": \"成功添加屏蔽\"\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "fetch(\"http://localhost:3000/block/add\",{\n",
+    "    \"userId\": \"100000000\",\n",
+    "    \"stationId\": \"6\"\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ `/remove` 移除收藏"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"message\": \"成功移除收藏\"\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "fetch(\"http://localhost:3000/block/remove\",{\n",
+    "    \"userId\": \"100000000\",\n",
+    "    \"stationId\": \"6\"\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. 收藏 `/favorite`\n",
+    "\n",
+    "+ `/query` 查看用户收藏的驿站信息，展示用户的收藏"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +502,7 @@
    "source": [
     "fetch(\"http://localhost:3000/favorite/add\",{\n",
     "    \"userId\": \"100000000\",\n",
-    "    \"stationId\": \"2\"\n",
+    "    \"stationId\": \"6\"\n",
     "})"
    ]
   },
@@ -422,7 +531,7 @@
    "source": [
     "fetch(\"http://localhost:3000/favorite/remove\",{\n",
     "    \"userId\": \"100000000\",\n",
-    "    \"stationId\": \"2\"\n",
+    "    \"stationId\": \"6\"\n",
     "})"
    ]
   },
@@ -430,7 +539,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. 驿站管理员 `/manager`\n",
+    "### 5. 驿站管理员 `/manager`\n",
     "\n",
     "+ `/query` 查询管理的驿站"
    ]
@@ -587,14 +696,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5. 驿站  `station`\n",
+    "### 6. 驿站  `station`\n",
     "\n",
     "+ `/query` 查询驿站信息"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -603,24 +712,6 @@
      "text": [
       "{\n",
       "  \"stations\": [\n",
-      "    {\n",
-      "      \"station_id\": 1,\n",
-      "      \"manager_id\": \"200000\",\n",
-      "      \"station_name\": \"菜鸟驿站北京房山伟业嘉园东里2号楼店(易购超市店)\",\n",
-      "      \"address\": \"拱辰街道东关村竹园街1号-11\",\n",
-      "      \"coordinates\": {\n",
-      "        \"x\": 116.16213100000004,\n",
-      "        \"y\": 39.733182000000006\n",
-      "      },\n",
-      "      \"speed_score\": \"4.7\",\n",
-      "      \"service_score\": \"5.0\",\n",
-      "      \"price_score\": \"3.7\",\n",
-      "      \"business_hours\": \"08:00-20:00\",\n",
-      "      \"business_area\": \"伟业嘉园商圈\",\n",
-      "      \"capacity\": 100,\n",
-      "      \"is_open\": 1,\n",
-      "      \"distance\": 869\n",
-      "    },\n",
       "    {\n",
       "      \"station_id\": 5,\n",
       "      \"manager_id\": \"200004\",\n",
@@ -658,24 +749,6 @@
       "      \"distance\": 1400\n",
       "    },\n",
       "    {\n",
-      "      \"station_id\": 2,\n",
-      "      \"manager_id\": \"200001\",\n",
-      "      \"station_name\": \"菜鸟驿站(北京房山阳光邑上417东门店)\",\n",
-      "      \"address\": \"北京市房山区拱辰街道拱辰大街阳光邑上41-7号\",\n",
-      "      \"coordinates\": {\n",
-      "        \"x\": 116.18257827478999,\n",
-      "        \"y\": 39.742459424030024\n",
-      "      },\n",
-      "      \"speed_score\": \"3.7\",\n",
-      "      \"service_score\": \"3.3\",\n",
-      "      \"price_score\": \"4.0\",\n",
-      "      \"business_hours\": \"06:00-17:00\",\n",
-      "      \"business_area\": \"阳光邑上小区\",\n",
-      "      \"capacity\": 90,\n",
-      "      \"is_open\": 0,\n",
-      "      \"distance\": 1486\n",
-      "    },\n",
-      "    {\n",
       "      \"station_id\": 6,\n",
       "      \"manager_id\": \"200000\",\n",
       "      \"station_name\": \"菜鸟驿站(北京房山阜盛家园店)\",\n",
@@ -692,6 +765,24 @@
       "      \"capacity\": 100,\n",
       "      \"is_open\": 1,\n",
       "      \"distance\": 2615\n",
+      "    },\n",
+      "    {\n",
+      "      \"station_id\": 4,\n",
+      "      \"manager_id\": \"200003\",\n",
+      "      \"station_name\": \"菜鸟驿站(北京房山世茂维拉小区店)\",\n",
+      "      \"address\": \"北京市房山区拱辰街道阳城环路22号\",\n",
+      "      \"coordinates\": {\n",
+      "        \"x\": 115.99157500000001,\n",
+      "        \"y\": 39.695620000000005\n",
+      "      },\n",
+      "      \"speed_score\": \"4.0\",\n",
+      "      \"service_score\": \"4.0\",\n",
+      "      \"price_score\": \"4.3\",\n",
+      "      \"business_hours\": \"08:00-20:00\",\n",
+      "      \"business_area\": \"世茂维拉小区\",\n",
+      "      \"capacity\": 150,\n",
+      "      \"is_open\": 1,\n",
+      "      \"distance\": 15959\n",
       "    }\n",
       "  ]\n",
       "}\n"
@@ -701,7 +792,8 @@
    "source": [
     "fetch(\"http://localhost:3000/station/query\",{\n",
     "    \"longitude\": \"116.17212999999992\",\n",
-    "    \"latitude\": \"39.731781999999995\"\n",
+    "    \"latitude\": \"39.731781999999995\",\n",
+    "    \"userId\": \"100000000\"\n",
     "})"
    ]
   },
@@ -714,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +860,8 @@
     "fetch(\"http://localhost:3000/station/query_by_name\",{\n",
     "    \"name\": \"院店\",\n",
     "    \"longitude\": \"116.17212999999992\",\n",
-    "    \"latitude\": \"39.731781999999995\"\n",
+    "    \"latitude\": \"39.731781999999995\",\n",
+    "    \"userId\": \"100000000\"\n",
     "})"
    ]
   },
@@ -776,7 +869,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6. 用户 `/user`\n",
+    "### 7. 用户 `/user`\n",
     "\n",
     "+ `/rename` 用户重命名"
    ]
@@ -928,7 +1021,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 7. 运单 `/waybill`\n",
+    "### 8. 运单 `/waybill`\n",
     "\n",
     "+ `/not_shipped` 查询未发货的运单"
    ]
